--- a/web/src/main/webapp/index.html
+++ b/web/src/main/webapp/index.html
@@ -1,1 +1,114 @@
-TEST
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <script>document.write('<base href="/" />');</script>
+    <title>Test page title</title>
+    <!-- Required meta tags always come first -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+
+    <!-- Bootstrap 3.3.7 CSS CDN -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Font-awesome 4.7.0 CSS CDN -->
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+          integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <!-- Google font CDN -->
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600" rel="stylesheet"/>
+
+    <!-- Main CSS -->
+    <link rel="stylesheet" href="/assets/css/web.css">
+    <!--<link rel="icon" href="/assets/favicon.ico">-->
+</head>
+
+<body>
+<!--[if lt IE 10]>
+<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
+    your browser</a> to improve your experience.</p>
+<![endif]-->
+
+<div class="header">
+    <nav class="container">
+        <div class="row pvs">
+            <div class="col-xs-4">
+                <a href="#" title="">
+                    <img alt="" height="44">
+                </a>
+            </div>
+            <div class="col-xs-8 media-middle text-right small">
+                <ul class="list-inline mvs">
+                    <li class="list-inline-item mrm"><a class="text-white" href="#">FAQ</a></li>
+                    <li class="list-inline-item mrm"><a class="text-white" href="#">Contact Us</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</div>
+
+<div class="container">
+    <tap-registration>loading...</tap-registration>
+</div>
+
+<script src="/assets/js/polyfills.js"></script>
+<script src="/assets/js/vendor.js"></script>
+<script src="/assets/js/app.js"></script>
+
+
+<footer class="footer pvxl mtxxl">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-6 col-sm-3">
+                <a href="#" title="">
+                    <img alt="" height="46">
+                </a>
+            </div>
+            <div class="col-xs-6 col-sm-3">
+                <ul class="list-unstyled mtl">
+                    <li><strong>Customer Care</strong></li>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">Help Center</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Low Price Guarantee</a></li>
+                    <li><a href="#">Group Services</a></li>
+                </ul>
+            </div>
+            <div class="col-xs-6 col-sm-3">
+                <ul class="list-unstyled mtl">
+                    <li><strong>Partnerships</strong></li>
+                    <li><a href="#">Work with Us</a></li>
+                    <li><a href="#">Supplier Sign-up</a></li>
+                    <li><a href="#">Distribution Programs</a></li>
+                    <li><a href="#">Partnerships</a></li>
+                </ul>
+            </div>
+            <div class="col-xs-6 col-sm-3">
+                <ul class="list-unstyled mtl">
+                    <li><strong>Company</strong></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Corporate Info</a></li>
+                    <li><a href="#">Media Center</a></li>
+                    <li><a href="#">Our Travel Blog</a></li>
+                    <li><a href="#">Careers</a></li>
+                    <li><a href="#">Site Map</a></li>
+                    <li><a href="#">Free Newsletter</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</footer>
+
+<!--<script src="/assets/js/vendor/mordernizr-custom.js"></script>-->
+<!-- jQuery first, then Tether, then Bootstrap JS. -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"
+        integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7"
+        crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
+<script src="/assets/js/vendor/bootstrap3-typeahead.js"></script>
+</body>
+
+</html>
